<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/firstNameTxtView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameTxtView"
        android:layout_width="353dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/firstNameTxtView"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxtView" />

    <EditText
        android:id="@+id/emailTxtView"
        android:layout_width="353dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/lastNameTxtView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTxtView" />

    <EditText
        android:id="@+id/passowrdTxtView"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/emailTxtView"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtView" />

    <EditText
        android:id="@+id/repeatPasswordTxtView"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/passowrdTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passowrdTxtView" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordTxtView" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUpBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>